# django-graphql-example

./: README.md  manage.py  pyproject.toml
apps/blog/: apps.py  inputs.py  models.py  mutations.py  queries.py  types.py
apps/blog/migrations/: 0001_initial.py
pythonista/: graphql.py  settings.py  urls.py  wsgi.py
