[tool.poetry]
name = "pythonista"
version = "0.1.0"
description = "Pythonista - Sample Assignment"
authors = ["Mohammed Rishad <rishad@reckonsys.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
graphene-django = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
